--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,5 @@
 /**********
-General - Font Smoothing
+General Styling
 ***********/
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6, p, .navbar, .brand, .btn-simple, a, .td-name, td {
@@ -479,10 +479,15 @@ Home About Section
 }
 
 #img-carlo {
-    margin: 75px 0 30px 0;
-    width: 65%;
-    max-width: 375px;
-    height: auto;
+    margin-top: 55px;
+    width: auto;
+    height: 275px;
+    padding:0 20px;
+}
+
+.contact-container {
+    float: left;
+    margin: 20px 10px 30px 0;
 }
 
 /********
@@ -527,6 +532,10 @@ Home 3rd party API Section
 
 .section-api {
     background-color: #FFF;
+}
+
+#api-replacement-wrapper {
+    display: none;
 }
 
 #api-title {
@@ -578,8 +587,17 @@ Home 3rd party API Section
     margin-bottom: 40px;
 }
 
+#api-img {
+    margin: 20px auto;
+    height: 300px;
+    width: auto;
+}
 
-
+.api-btn {
+    color: #fff;
+    margin: 25px auto 40px;
+    font-size: 18px;
+}
 
 
 
@@ -589,7 +607,7 @@ Home Data Analysis Section
 
 .section-data {
     background-color: #003171;
-    height: 800px;
+    height: 400px;
 }
 
 
@@ -599,7 +617,7 @@ Home Machine Learning Section
 
 .section-machine {
     background-color: #03A678;
-    height: 800px;
+    height: 400px;
 }
 
 
